Development history / change log, please read from bottom up

Version 3.3.4 - xx yyy 2018
Generic changes/fixes
	* fix ratio calculation triggered used capacity to reached motor altitude
	* update Java download URLs in Windows launcher
	* new device xsd version
	* make ready to execute using JRE 8 to 10
	* fix [sr #109555] CSV Export does not use decimal point separator
	* fix raw csv export 
	* fix exception while moving scaled curve display around start time stamp.
	
Device specific changes/fixes
	* HottAdapter* -  fix error message GDE_MSGW2404 appearing only at the first import, Fix missing tab activation after import
	* HottAdapter* -  fix start time stamp calculation while special case receiver data only analysis
	* HottAdapter - fix wrong sensor sequence reference while import *.bin with single ESC sensor module connected.
	* Hitec DRX1 - add support (identical Hitex RDX1 Pro is the 100W version)
	* Hitec X1 Red - add support
	* iMax B6 mini - add support (iMax B6 AC V2)
	* PolaronPro - fix cell voltage update
	* Polaron* - fix measurement index position reference (according available specification)
	* GPS-Logger2 - fix device visualization dialog
	* ArduPilot - initial implementation based on LogStructure.h
	
History analysis
	# Flexibility
	.. OpenStreetMap GeoCodes (now prioritized over GoogleMaps)
	      ! -> Clear the location cache via the 'Clear cache' button
    .. Add warning and event bits support to HoTTAdapter1/2
		>> WB pls delete in the official version
		- Add raw trail types and warning bits consolidation (V34)
		- Add raw scores support
		- Add binary packages builds
	.. Facilitate using the jars in other systems
		>> WB pls delete in the official version
		- Reduce Settings class dependencies from the gde.ui package
		- Add support for DataExplorer instantiation without UI
	# Performance
	.. Leverage multicore processors
		>> WB pls delete in the official version
		- Enhance performance via threadsafe HoTTbinHistoReaders