@@ -8,7 +8,8 @@ Generic changes/fixes
 	* make ready to execute using JRE 8 to 10
 	* fix [sr #109555] CSV Export does not use decimal point separator
 	* fix raw csv export 
-	* fix exception while moving scaled curve display around start time stamp.
+	* fix exception while moving scaled curve display around start time stamp
+	* fix adding KMZ export menu on device level
 	
 Device specific changes/fixes
 	* HottAdapter* -  fix error message GDE_MSGW2404 appearing only at the first import, Fix missing tab activation after import
